--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,10 @@
     <head>
         <meta charset="utf-8"/>
         <title>{{title}}</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        
     </head>
     <body>
         <div id="about">
