Linked stylesheets and script to home page

--- a/hosted/styles/homeStyle.css
+++ b/hosted/styles/homeStyle.css
@@ -8,3 +8,11 @@ html, body {
   background-color: #333333;
   font-family: "Roboto Condensed", sans-serif;
 }
+
+h1 {
+  font-weight: bold;
+}
+
+h4 {
+  font-weight: lighter;
+}
