--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,10 +9,7 @@
         <script src ="/assets/src/HomeBundle.js"></script>
     </head>
     <body>
-        <div id="about">
-            <h1>VINCENT LE</h1>
-            <h4>GAMEPLAY PROGRAMMER</h4>
-            <div id="icons"></div>
-        </div>
+        <section id="content">
+        </section>
     </body>
 </html>
