Completed the About section and loading/displaying for the code projects from the database

--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -7,6 +7,6 @@ html, body {
     padding: 0;
     overflow-x: hidden;
     color: palette.$primary-color;
-    background-color: palette.$background-gradient-top;
+    background-color: palette.$background-gradient-bottom;
     font-family: palette.$main-font;
 }
