--- a/hosted/styles/homeStyle.css
+++ b/hosted/styles/homeStyle.css
@@ -5,55 +5,243 @@ html, body {
   padding: 0;
   overflow-x: hidden;
   color: #FFFFFF;
-  background-color: #333333;
+  background-color: #242424;
   font-family: "Roboto Condensed", sans-serif;
 }
 
 #about-section {
-  background-color: #333333;
-  padding: 20px;
+  height: 880px;
+  background: linear-gradient(to bottom, #333333 50%, #242424 100%);
+  padding: 160px 160px 40px 160px;
 }
 #about-section #about-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin: 0 auto;
 }
-#about-section #about-content #about-text h1 {
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
+#about-section #about-content #about-text {
+  flex-grow: 2;
+  display: flex;
+  justify-content: center;
+}
+#about-section #about-content #about-text #about-text-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#about-section #about-content #about-text #about-text-content h1 {
+  font-size: 140;
+  margin-bottom: 0;
   font-weight: bold;
 }
-#about-section #about-content #about-text h4 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  font-weight: 300;
+#about-section #about-content #about-text #about-text-content h2 {
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-size: 40;
+  font-weight: 350;
+  text-shadow: 0px 4px 4px #1c1c1c;
+  height: 47px;
+  color: #CACACA;
+  display: inline-block;
+  position: relative;
 }
-#about-section #about-content #about-text #icons {
+#about-section #about-content #about-text #about-text-content h2:after {
+  content: "|";
+  position: absolute;
+  right: -15px;
+  top: -2.5px;
+  animation: blink 0.5s ease-in-out infinite;
+  font-weight: 250;
+  font-size: 40px;
+  color: #CACACA;
+}
+#about-section #about-content #about-text #about-text-content #icons {
   display: flex;
   gap: 15px;
 }
-#about-section #about-content #about-text #icons .icon-container {
+#about-section #about-content #about-text #about-text-content #icons .icon-container {
   background-color: #606060;
   border-radius: 50%;
-  width: 25px;
-  height: 25px;
+  width: 56px;
+  height: 56px;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 0.5s transform 0.5s;
+  transition: all 0.15s ease-in-out;
+  box-shadow: 0px 0px 30px #212121;
+  cursor: pointer;
 }
-#about-section #about-content #about-text #icons .icon-container:hover {
+#about-section #about-content #about-text #about-text-content #icons .icon-container:hover {
   background-color: #FFFFFF;
   transform: scale(1.1);
 }
-#about-section #about-content #about-text #icons .icon-container .icon:hover {
-  background-color: #242424;
+#about-section #about-content #about-text #about-text-content #icons .icon-container:hover .icon {
+  color: #242424;
   transform: scale(1.1);
 }
+#about-section #about-content #about-text #about-text-content #icons .icon-container .icon {
+  width: 28px;
+  height: auto;
+  transition: color 1s transform 1s ease-in-out;
+}
+#about-section #about-content #about-vertical-line {
+  flex-grow: 0.25;
+  border-left: 3px solid #FFFFFF;
+  height: 720px;
+}
+#about-section #about-content #about-image {
+  flex-grow: 1.25;
+  text-align: center;
+}
 #about-section #about-content #about-image img {
-  max-width: 300px;
+  max-width: 420px;
   height: auto;
   border-radius: 10px;
+  box-shadow: 0px 4px 4px #121212;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+#code-projects {
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#code-projects .code-project-node {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: 238px;
+}
+#code-projects .code-project-node:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+#code-projects .code-project-node:hover .code-project-overlay {
+  animation: overlayExpand 0.25s forwards ease-out;
+}
+#code-projects .code-project-node:hover .code-project-image {
+  transform: scale(1.1);
+}
+#code-projects .code-project-node:hover .code-project-node-title,
+#code-projects .code-project-node:hover .code-project-node-roles {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.code-project-node-background {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.code-project-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+  transform: scale(1);
+}
+
+.code-project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+
+.code-project-node-info {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 2;
+}
+
+.code-project-node-title, .code-project-node-roles {
+  margin: 0;
+  transform: translateY(10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  opacity: 0;
+}
+
+.code-project-node-title {
+  font-size: 50;
+  font-weight: 300;
+  color: #FFFFFF;
+}
+
+.code-project-node-roles {
+  font-size: 35;
+  font-weight: 200;
+  color: #8C8C8C;
+}
+
+@keyframes overlayExpand {
+  0% {
+    width: 0;
+    opacity: 0.6;
+  }
+  100% {
+    width: 100%;
+    opacity: 0.6;
+  }
+}
+#projects {
+  display: flex;
+  flex-direction: column;
+  padding: 80px 240px 80px 240px;
+}
+#projects #projects-header {
+  height: 70px;
+  margin: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+}
+#projects #projects-header #projects-header-text {
+  flex-grow: 0.67;
+  display: flex;
+  align-items: center;
+}
+#projects #projects-header #projects-header-text h1 {
+  font-size: 60px;
+  font-weight: bold;
+}
+#projects #projects-header #projects-header-navigation {
+  flex-grow: 0.33;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+#projects #projects-header #projects-header-navigation .nav-button {
+  cursor: pointer;
+}
+#projects #projects-header #projects-header-navigation .nav-button h2 {
+  font-size: 40px;
+  font-weight: 350;
+  opacity: 41%;
+  transition: opacity 0.3s ease;
+}
+#projects #projects-header #projects-header-navigation .nav-button h2:hover {
+  opacity: 100%;
+}
+#projects #projects-header #projects-header-navigation .nav-button.selected h2 {
+  opacity: 100%;
+}
+#projects #projects-header #projects-header-navigation .nav-button:not(.selected) h2 {
+  opacity: 41%;
 }
