--- a/scss/homeStyle.scss
+++ b/scss/homeStyle.scss
@@ -1,65 +1,2 @@
-@use 'portfolio';
-@use 'palette';
-
-#about-section {
-    background-color: palette.$background-gradient-top;
-    padding: 20px;
-
-    #about-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        margin: 0 auto;
-
-        #about-text {
-            h1 {
-                font-size: 2.5rem;
-                margin-bottom: 0.5rem;
-                font-weight: bold;
-            }
-            
-            h4 {
-                font-size: 1.5rem;
-                margin-bottom: 1rem;
-                font-weight: 300;
-            }
-
-            #icons {
-                display: flex;
-                gap: 15px;
-
-                .icon-container {
-                    background-color: #606060;
-                    border-radius: 50%;
-                    width: 25px;
-                    height: 25px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    transition: background-color 0.5s transform 0.5s;
-
-                    &:hover {
-                        background-color: palette.$primary-color;
-                        transform: scale(1.1);
-                    }
-
-                    .icon {
-                        &:hover {
-                            background-color: palette.$background-gradient-bottom;
-                            transform: scale(1.1);
-                        }
-                    }
-                }
-            }
-        }
-
-        #about-image {
-            img {
-                max-width: 300px;
-                height: auto;
-                border-radius: 10px;
-            }
-        }
-    }
-}
+@use 'home/homeAbout';
+@use 'home/homeProjects';
