Established Audio model and started working on displaying the Audio cards

--- a/scss/home/_homeProjects.scss
+++ b/scss/home/_homeProjects.scss
@@ -1,6 +1,7 @@
 @use '../portfolio';
 @use '../palette';
 @use 'codeProjects';
+@use 'audioProjects';
 
 $selected-opacity: 100%;
 $unselected-opacity: 41%; 
