--- a/hosted/styles/homeStyle.css
+++ b/hosted/styles/homeStyle.css
@@ -12,7 +12,7 @@ html, body {
 #about-section {
   height: 880px;
   background: linear-gradient(to bottom, #333333 50%, #242424 100%);
-  padding: 160px 160px 40px 160px;
+  padding: 80px 160px 40px 160px;
 }
 #about-section #about-content {
   display: flex;
@@ -198,6 +198,66 @@ html, body {
     opacity: 0.6;
   }
 }
+#audio-projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  align-items: center;
+}
+#audio-projects .audio-project-node {
+  position: relative;
+  width: 300px;
+  height: 345px;
+  overflow: hidden;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+}
+#audio-projects .audio-project-node:hover {
+  transform: scale(1.05);
+}
+#audio-projects .audio-project-node .audio-project-node-thumbnail {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+#audio-projects .audio-project-node .audio-project-node-thumbnail .code-project-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translateX(-100);
+}
+#audio-projects .audio-project-node .audio-project-node-thumbnail .audio-project-node-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+#audio-projects .audio-project-node .audio-project-node-thumbnail .audio-project-node-overlay .audio-play-icon {
+  color: #FFFFFF;
+  cursor: point;
+  transition: transform 0.2s ease;
+  z-index: 2;
+}
+#audio-projects .audio-project-node .audio-project-node-thumbnail .audio-project-node-overlay .audio-play-icon:hover {
+  transform: scale(1.2);
+}
+#audio-projects .audio-project-node:hover .audio-project-node-overlay {
+  opacity: 0.6;
+}
+#audio-projects .audio-project-node-info {
+  text-align: center;
+  padding: 10px 0;
+  font-size: 16px;
+}
+
 #projects {
   display: flex;
   flex-direction: column;
